# PP-Mark

./: .gitignore  README.md  attack_matrix.py  config.json  config_small.json  dct_watermark.py  pp_mark_v0.3_implementation_plan.md  pyproject.toml  requirements.txt
assets/: metadata.json
attack_logs/: attack_results.json
docs/: architecture.md  sample_i2i_metadata_v21.json  sample_t2i_metadata_v21.json  seed_guidance_v21.md  v21_attack_plan.md  v21_attack_steps.md  v21_dev_log.md  v21_summary.md
halo2_prover/: Cargo.toml
halo2_prover/outputs/: public_inputs.json
halo2_prover/src/: main.rs
out_demo/: key_info.json  metadata.json
out_demo2/: key_info.json  metadata.json
out_demo2/halo2/: public_inputs.json  witness.json
out_demo3/: key_info.json  metadata.json
out_demo4/: key_info.json  metadata.json
out_demo_cuda/: key_info.json
out_demo_test_small/: key_info.json  latent_noise.npy  metadata.json
out_stub/: key_info.json  latent_noise.npy  metadata.json
results/: attack_matrix.json  metrics_summary.json  perceptual_metrics.json
scripts/: embed_c2pa_v21.py  eval_image_quality.py  halo2_stub.py  prepare_samples.py  provider_setup.py  run_attack_matrix.py  run_attack_matrix_v21.py  run_attack_suite.py  run_diffusion_regen.py  run_full_demo.py  run_full_demo_v21.py  run_full_pipeline.sh  run_mueller_attack.py  run_prover.py  run_regen_attack_v21.py  run_regen_surrogate_v21.py  run_verifier.py  train_extractor.py  train_pattern.py  tune_litevae.py
tests/: test_payload.py  test_prover_verifier_stub.py  test_semantic_anchor.py
(+62 files in other folders)
