[project]
name = "ppmark-v2-1"
version = "2.1.0"
description = "PP-Mark v2.1 semantic-anchor dual watermarking toolkit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pillow>=10.4",
  "pywavelets>=1.6",
  "scipy>=1.11",
  "typer>=0.12",
  "rich>=13.7",
  "poseidon-py>=0.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
train = [
  "torch>=2.3",
  "torchvision>=0.18",
]

[project.scripts]
ppmark-v02 = "ppmark_v02.cli:main"
ppmark-v21 = "ppmark_v21.cli:main"

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"
